# tiddly-data-converter

./: .env.example  .gitattributes  .gitignore  README  README.md  estructura.txt  go.work
.github/: dependabot.yml
Docs/: Informe_Tecnico_de_Tiddler (Esp).md  Technical_Report_Tiddler_Sys_(Eng).md  estructura_de_commits_tiddly-data-converter.JSON  tiddlers_esp.jsonl  tiddly-data-converter.jsonl
contratos/: contratos.txt  m01-s01-extractor-contract.md  m01-s02-extractor-bootstrap.json  m01-s03-extractor-env-wsl.json  m01-s04-doctor-contract.json  m01-s05-ingesta-contract.json  m01-s05-ingesta-contract.md  m01-s06-ingesta-go-env-wsl.json  m01-s06-ingesta-go-env-wsl.md  m01-s07-ingesta-bootstrap.md.json  m01-s09-ingesta-timestamp-policy.md.json  m01-s10-doctor-audit.md.json  m01-s11-ingesta-dedup-triage.md.json  m01-s12-pipeline-costura.md.json  m01-s13-canon-bootstrap.md.json  m01-s16-canon-jsonl-writer.md.json  m01-s17-canon-admit-v0.md.json  m01-s33-single-jsonl-functional-tiddlers-from-real-html-v0.md.json  m02-s19-canon-jsonl-gate-v0.md.json  m02-s21-canon-gate-acceptance-matrix.md.json  m02-s22-canon-gate-batch-audit-v0.md.json  m02-s23-canon-gate-batch-report-v0.md.json  m02-s24-canon-gate-batch-emit-v0.md.json  m02-s26-canon-gate-batch-report-persist-v0.md.json  m02-s27-canon-gate-batch-report-persist-v0.md.json  m02-s29-canon-accumulator-truth-pin-and-impl-v0.md.json  m02-s31-canon-accumulate-replay-verify-and-ci-v0.md.json  (+22 more)
rust/extractor/: Cargo.toml
rust/extractor/src/: error.rs  lib.rs  raw.rs  report.rs
rust/extractor/tests/: test_extraction.rs
(+555 files in other folders)
